--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body {
     color: white;
 }
 
-.location, .temperature {
+.location, 
+.temperature {
     height: 30vh;
     width: 50%;
     display: flex;
@@ -38,6 +39,6 @@ body {
     font-size: 30px;
 }
 
-degree-section h2 {
+.degree-section h2 {
     font-size: 40px;
 }
