--- a/RockPaperScissors/RockPaperScissors.css
+++ b/RockPaperScissors/RockPaperScissors.css
@@ -35,19 +35,22 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    opacity: 0;
 }
 
 .intro h1 {
     font-size: 50px;
 }
 
-.intro button {
+.intro button, 
+.match button {
     width: 150px;
     height: 50px;
     background: none;
     border: none;
     color: white;
     font-size: 20px;
+    cursor:pointer;
 }
 
 .match {
@@ -55,4 +58,31 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+
+.winner {
+    color: white;
+    text-align: center;
+    font-size: 50px;
+}
+
+.hands, 
+.options {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.player-hand {
+    transform: rotateY(180deg);
+}
+
+div.fade {
+    opacity: 0;
+    pointer-events:none;
+}
+
+div.fadein {
+    opacity: 1;
+    pointer-events: all;
 }
