--- a/RockPaperScissors/RockPaperScissors.css
+++ b/RockPaperScissors/RockPaperScissors.css
@@ -35,7 +35,7 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    opacity: 0;
+    transition: opacity 0.5s ease;
 }
 
 .intro h1 {
@@ -58,6 +58,7 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    transition: opacity 0.5s ease 0.5s;
 }
 
 .winner {
@@ -77,12 +78,12 @@ section {
     transform: rotateY(180deg);
 }
 
-div.fade {
+div.fadeOut {
     opacity: 0;
     pointer-events:none;
 }
 
-div.fadein {
+div.fadeIn {
     opacity: 1;
     pointer-events: all;
 }
